--- a/CBQ/App.config
+++ b/CBQ/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <!-- Smtp 服务器 -->
+    <add key="SmtpHost" value="smtp.qq.com" />
+    <!-- Smtp 服务器端口 -->
+    <add key="SmtpPort" value="25" />
+    <!--发送者 Email 地址-->
+    <add key="FromEmailAddress" value="zemin153@qq.com" />
+    <!--发送者 Email 密码-->
+    <add key="FormEmailPassword" value="??????" />
+  </appSettings>
 </configuration>
